tests/baselines/reference/parserComputedPropertyName29.errors.txt
parserComputedPropertyName29.ts(3,6): error TS2304: Cannot find name 'e'.
parserComputedPropertyName29.ts(3,11): error TS2304: Cannot find name 'id'.
parserComputedPropertyName29.ts(4,6): error TS2304: Cannot find name 'e2'.


==== parserComputedPropertyName29.ts (3 errors) ====
    class C {
        // yes ASI
        [e] = id++
         ~
!!! error TS2304: Cannot find name 'e'.
              ~~
!!! error TS2304: Cannot find name 'id'.
        [e2]: number
         ~~
!!! error TS2304: Cannot find name 'e2'.
    }